docs: clarify PROXY_API_KEY is user-defined password

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@
 # Your Kiro refresh token (obtained from Kiro IDE traffic)
 REFRESH_TOKEN="your_kiro_refresh_token_here"
 
-# API key for accessing this proxy (choose any secure string)
-PROXY_API_KEY="your_secure_api_key_here"
+# Password to protect YOUR proxy server
+# This is NOT a token from anywhere - YOU make it up!
+# Use this same value as api_key when connecting to your gateway
+# Example: "my-super-secret-password-123" or any secure string
+PROXY_API_KEY="my-super-secret-password-123"
 
 # ===========================================
 # OPTIONAL
